kubernetes/apps/pegasus/link-shortener/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: link-shortener
  namespace: link-shortener
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/limit-rpm: 20
    nginx.ingress.kubernetes.io/ssl-ciphers: "ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_set_headers "X-Frame-Options: sameorigin";
      more_set_headers "X-Content-Type-Options: nosniff";
      more_set_headers "X-XSS-Protection: 1; mode=block";
      more_set_headers "Referrer-Policy: same-origin";
      more_set_headers "Permissions-Policy: accelerometer=(), battery=(), camera=(), geolocation=(), gyroscope=(), magnetometer=(), microphone=(), payment=(), usb=()";
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - link.thetillhoff.de
    secretName: ingress-tls
  rules:
  - host: link.thetillhoff.de
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: link-shortener
            port:
              number: 80
